Adicionando a pasta Din dentro de uma pasta library e configurando autoloader no composer.json

--- a/composer.json
+++ b/composer.json
@@ -2,4 +2,9 @@
 	"name": "dindigital/din",
 	"description": "Din Digital Framework",
 	"type": "library",
+	"autoload": {
+		"psr-0": {
+			"Din\\": "library/"
+		}
+	}
 }
