--- a/composer.json
+++ b/composer.json
@@ -6,5 +6,14 @@
     "psr-0": {
       "Din\\": "library/"
     }
+  },
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/dindigital/DataAccessLayer"
+    }
+  ],
+  "require": {
+    "dindigital/dataaccesslayer": "dev-master"
   }
 }
