--- a/composer.json
+++ b/composer.json
@@ -8,16 +8,17 @@
     }
   },
   "require": {
-    "dindigital/data-access-layer": "dev-master"
+    "dindigital/data-access-layer": "dev-master",
+    "dindigital/essential": "dev-master"
   },
   "authors": [
-     {
-         "name": "Jair Cueva Junior",
-         "email": "junior@dindigital.com"
-     },
-     {
-         "name": "Mario Mello",
-         "email": "mario@dindigital.com"
-     }
-   ]
+    {
+      "name": "Jair Cueva Junior",
+      "email": "junior@dindigital.com"
+    },
+    {
+      "name": "Mario Mello",
+      "email": "mario@dindigital.com"
+    }
+  ]
 }
