--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,12 @@
   "name": "dindigital/din",
   "description": "Din Digital Framework",
   "type": "library",
+  "require": {
+    "php": ">=5.3.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "3.7.14"
+  },
   "autoload": {
     "psr-0": {
       "Din\\": "library/"
